completed HTML/CSS challenges

--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,22 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <div class="gray large-frame">
+        <div class="blue-box"></div>
+    </div>
+    <div class="white larger-frame">
+        <div class="text-box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsum qui dolor nostrum libero et, at impedit. Commodi debitis cupiditate voluptates quidem possimus autem vitae iste tenetur vel, reprehenderit facilis!. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus placeat laborum, deleniti odio a porro quisquam incidunt saepe impedit distinctio necessitatibus error eius dignissimos facilis fugit minus. Quaerat, ut beatae? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet adipisci delectus ratione facere. Provident rerum dolores quisquam obcaecati assumenda alias numquam necessitatibus quam, ipsum repudiandae minima ipsa earum dolorem magni! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab in laudantium quia repellendus sed dolores ipsam officiis voluptatum, sint quos libero nulla eum, nobis impedit consequatur temporibus quas aliquam incidunt!</p></div>
+    </div>
+    <div class="blue large-frame"></div>
+    <div class="cyan large-frame"></div>
+    <div class="green large-frame"></div>
+    <div class="yellow large-frame"></div>
+</body>
+</html>
