--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,23 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./index.css">
+    <title>Document</title>
+</head>
+<body>
+    <main class="main-wrapper">
+        <div class="top-bar"></div>
+        <section class="main-section">
+            <div class="left-section"></div>
+            <div class="mid-section">
+                <div class="mid-footer"></div>
+            </div>
+            <div class="right-section"></div>
+        </section>
+    </main>
+    
+</body>
+</html>
